feat: add request-metric endpoint
